--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,8 +11,8 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: Welcome to our Studio!
-    text: It's Nice To Meet You
+    title: YOUR COMMUNITY × YOUR WAY
+    text: CHANGING THE WAY COMMUNITIES COME TOGETHER
     button: Tell Me More
     buttonlink: "#services"
 
