--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url    : "https://intrsect.github.io/" # the base hostname & protocol for your s
 baseurl: "/" # the subpath of your site, e.g. /blog
 
 title      : Intrsect
-email      : support@intrsect.io #this is also the email contact forms will go to
+email      : support[at]intrsect.io #this is also the email contact forms will go to
 description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
 author     : Your Name
 # logo:     #optional, defaults to site title
